--- a/DiscordNight.css
+++ b/DiscordNight.css
@@ -2,13 +2,13 @@
  * @name DiscordNight
  * @version 0.9.5.5
  * @description Dark and compact theme for BetterDiscord
- * @source https://github.com/KillYoy/DiscordNight/
- * @updateUrl https://raw.githubusercontent.com/KillYoy/DiscordNight/master/DiscordNight.css
+ * @source https://github.com/brendanprice2003/DiscordNighThemeFork
+ * @updateUrl https://raw.githubusercontent.com/brendanprice2003/DiscordNighThemeFork/main/DiscordNight.css
  * @website 
- * @donate https://www.paypal.me/KillYoy
+ * @donate 
  * @patreon 
  * @invite 
- * @author KillYoy#0295
+ * @author brendanprice#9155
  * @authorId 98468214824001536
  * @authorLink 
 */
