--- a/DiscordNight.theme.css
+++ b/DiscordNight.theme.css
@@ -2,10 +2,9 @@
  * @name DiscordNight
  * @version 0.9.5.5
  * @description Dark and compact theme for BetterDiscord
- * @source https://github.com/KillYoy/DiscordNight/
- * @donate https://www.paypal.me/KillYoy
- * @author KillYoy#0295
+ * @source https://github.com/brendanprice2003/DiscordNighThemeFork
+ * @author brendanprice#9155
  * @authorId 98468214824001536
 */
 
-@import url("https://KillYoy.github.io/DiscordNight/DiscordNight.css");
+@import url("https://raw.githubusercontent.com/brendanprice2003/DiscordNighThemeFork/main/DiscordNight.css");
